...
    <string name="app_name">Telemesh</string>
    <string name="activity_view_profile">My profile</string>
    <string name="enter_first_name">First name</string>
    <string name="enter_last_name">Last name</string>
    <string name="signup">Next</string>
    <!--    <string name="no_item_found">No item found</string>-->
    <string name="done">Done</string>
    <string name="myDigits"> abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890 </string>
    <string name="create_user">Create User</string>
    <string name="select_avatar">Select an avatar</string>
    <string name="select_photo">Select Avatar</string>
    <string name="title_discoverd_fragment">Users</string>
    <string name="title_personal_fragment">Personal Contacts</string>
    <string name="title_message_feed_fragment">Broadcast</string>
    <string name="title_settings_fragment">My Telemesh</string>
    <string name="title_conversation_fragment">Conversation</string>

    <string name="logo_image">logo image</string>
    <string name="double_press_exit">Please click BACK again to exit.</string>
    <string name="chat_send_button_description" translatable="false">Send icon.</string>

    <string name="demo_language">English</string>
    <string name="activity_about_us">About Telemesh</string>
    <string name="app_version">Version:</string>

    <string name="no_contact_available">No user found</string>
...
    <string name="active_online">Active Now</string>
    <string name="active_offline">Offline</string>
    <string name="onboard_image">Onboard image</string>
    <string name="i_m_a_new_user">I\'m a New User</string>
    <string name="i_m_a_returning_user">I\'m a Returning User</string>
    <string name="profile_selection_image">Profile selection image</string>
    <string name="name_field_icon">Name field icon</string>
    <string name="user_id_copy">User id copy</string>
    <string name="user_id_qr_image">User id qr Image</string>
    <string name="export_my_profile">EXPORT MY PROFILE</string>
    <string name="copied">Copied</string>
    <string name="open_source_edition">Open Source Edition</string>
    <string name="about_description">Telemesh is a messaging app designed with Blockchain and Mesh networking. Unlike traditional messaging app Telemesh works with both internet and without internet connectivity. Telemesh is actively maintained by W3 Engineers Ltd.</string>
...
    <string name="accept">Accept</string>
    <string name="join">Join</string>
    <string name="new_chat">New Chat</string>
    <string name="new_group">New Group</string>
    <string name="group_name_hint">Name</string>
    <string name="total_participants">Total participants</string>
    <string name="add_member">Add member</string>
    <string name="remove_group_member">Remove group member</string>
    <string name="group_admin">Group Admin</string>
    <string name="leave_group">Leave group</string>
    <string name="group_name_updated">Group Name updated</string>
    <string name="other_profile">%s\'s Profile</string>
    <string name="only_admin_can_add_member">Only admin can add a member</string>
    <string name="add_new_member">Add new member</string>
    <string name="only_admin_can_remove_member">Only admin can remove a member</string>
    <string name="no_user_available">No User Found Yet</string>
...
