...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/chat_background"
        tools:context=".ui.groupdetails.GroupDetailsActivity">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
...
                    android:id="@+id/name_layout"
                    style="@style/signup_editext_style"
                    android:textColorHint="@color/hint_text_color"
                    app:hintTextAppearance="@style/hint_style"
                    android:layout_marginStart="@dimen/margin_15"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_pen"
                    app:layout_constraintTop_toBottomOf="@+id/image_profile_background">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_15"
                        android:backgroundTint="@color/new_user_button_color"
                        android:enabled="false"
                        android:fontFamily="@font/poppins_regular"
...
                    android:layout_marginTop="@dimen/margin_10"
                    android:src="@mipmap/ic_add_member"
                    app:layout_constraintTop_toBottomOf="@+id/separator_2"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/text_view_add_member"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:layout_marginStart="@dimen/margin_10"
                    android:paddingTop="@dimen/padding_10"
                    android:paddingBottom="@dimen/padding_10"
...
                    android:background="@color/divider_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_view_add_member" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_group_member"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/separator_3"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_group_member" />


                <TextView
                    android:id="@+id/text_view_leave_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:drawableStart="@mipmap/leave"
                    android:drawablePadding="@dimen/padding_10"
...
