<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_message_clear"
        app:showAsAction="never"
        android:title="Clear Chat" />

    <item
        android:id="@+id/menu_group_leave"
        app:showAsAction="never"
        android:title="Leave Group" />
</menu>